--- a/experimental/musicboxeditor/package.json
+++ b/experimental/musicboxeditor/package.json
@@ -24,10 +24,11 @@
     "@angular/platform-server": "2.2.3",
     "@angular/router": "3.2.3",
     "core-js": "2.4.1",
+    "jszip": "^3.1.3",
+    "midiconvert": "^0.4.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.26",
-	"midiconvert": "^0.4.1"
+    "zone.js": "0.6.26"
   },
   "devDependencies": {
     "@ngtools/webpack": "1.1.9",
